--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="/dist/css/app.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
+  <div data-bootstrap="<%= bootstrap %>"></div>
   <div id="app"></div>
+  <form action="/logout" method="post">
+    <button type="submit">Logout</button>
+  </form>
 
   <script type="text/javascript" src="/dist/js/bundle.js"></script>
 </body>
