--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,3 +11,6 @@
   <br /><br />
   <button type="submit">Submit</button>
 </form>
+<a href="/login">
+  <button type="submit">Return to Login</button>
+</a>
