--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <input type="password" name="password"/>
   </label>
   <br /><br />
-  <button type="submit">Submit</button>
+  <button type="submit">Login</button>
 </form>
   <a href="/register">
     <button type="submit">Create New User</button>
